Use external Cmake, versions greater than the default provided

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,8 @@ android {
 
     externalNativeBuild {
         cmake {
-            path "E:/citra_c++14/CMakeLists.txt"
+            version getCmakeVersion()
+            path "../../citra/CMakeLists.txt"
         }
     }
 
@@ -139,4 +140,20 @@ def getBuildVersionCode() {
     }
 
     return 0
+}
+
+def getCmakeVersion() {
+    try {
+        // Tokenized form of the output will be - ["cmake", "version", "M.m.p-rcx"], the version number
+        // will be at index 2
+        def version_string = 'cmake -version'.execute([], project.rootDir).text
+                .trim().tokenize()[2]
+
+        return version_string
+    }
+    catch(Exception e) {
+        logger.error('Cannot find Cmake, using default Cmake')
+    }
+
+    return null
 }
