--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ android {
                         "-DENABLE_SDL2=0", // Don't use SDL
                         "-DENABLE_WEB_SERVICE=0", // Don't use telemetry
                         "-DANDROID_ARM_NEON=true", // cryptopp requires Neon to work
+                        "-DENABLE_CUBEB=0"
 
                 abiFilters "arm64-v8a", "x86_64", "armeabi-v7a"//, "x86"
             }
