--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -23,7 +23,7 @@ android {
         // TODO If this is ever modified, change application_id in strings.xml
         applicationId "org.citra.citra_android"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 28
 
         versionCode(getBuildVersionCode())
 
@@ -68,12 +68,10 @@ android {
     defaultConfig {
         externalNativeBuild {
             cmake {
-                arguments "-DANDROID_STL=c++_static",
-                        "-DENABLE_QT=0", // Don't use QT
+                arguments "-DENABLE_QT=0", // Don't use QT
                         "-DENABLE_SDL2=0", // Don't use SDL
                         "-DENABLE_WEB_SERVICE=0", // Don't use telemetry
-                        "-DANDROID_ARM_NEON=true", // cryptopp requires Neon to work
-                        "-DENABLE_CUBEB=0"
+                        "-DANDROID_ARM_NEON=true" // cryptopp requires Neon to work
 
                 abiFilters "arm64-v8a", "x86_64", "armeabi-v7a"//, "x86"
             }
@@ -82,7 +80,7 @@ android {
 }
 
 ext {
-    androidSupportVersion = '26.1.0'
+    androidSupportVersion = '28.0.0'
 }
 
 dependencies {
@@ -104,7 +102,7 @@ dependencies {
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'com.nononsenseapps:filepicker:4.1.0'
     implementation 'org.ini4j:ini4j:0.5.4'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
 
 def getVersion() {
